// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders app component with a custom name 1`] = `
<p>
  Hello 
  Dmitriy
  !
</p>
`;

exports[`renders app component with a default name 1`] = `
<p>
  Hello 
  David
  !
</p>
`;
